# Computer-Technologies

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
Error/: Error.h  ErrorGen.h
Homework1/: .clangd  Makefile  commands.txt
Homework1/include/: Commands.h  Error.h  ErrorGen.hpp  InputFiles.h  Scheduler.h
Homework1/src/: InputFiles.c  Scheduler.c  main.c
Libs/: CMakeLists.txt
Libs/Error/: Error.h
Libs/ScratchBuffer/: CMakeLists.txt  ScratchBuf.c  ScratchBuf.h  StringSlice.h
Libs/String/: CMakeLists.txt  String.h
Libs/Vector/: CMakeLists.txt  Vector.h
ScratchBuffer/: CMakeLists.txt  ScratchBuf.c  ScratchBuf.h
Sem 5/: CMakeLists.txt  Makefile  monte-carlo.cpp
Sem 5/src/: main.c  main2.c  main5.c
Sem5/: Parallel_Matr_Mul_OMP.cpp  monte-carlo.cpp
Sem5/src/: main3.c  main4.c
Sem7/: CMakeLists.txt
Sem7/src/: 09-1a.c  09-1b.c  reader.c  writer.c
Task1/: CMakeLists.txt
Task1/Backup/: CMakeLists.txt
Task1/Backup/include/: Backup.h  Error.h  ErrorGen.h  FileList.h
Task1/Backup/src/: Backup.c  Error.c  FileList.c  main.c
Task1/Useless/: CMakeLists.txt  commands.txt
Task1/Useless/include/: Commands.h  Error.h  InputFiles.h  Scheduler.h
Task1/Useless/src/: Error.c  InputFiles.c  Scheduler.c  main.c
Task2/: CMakeLists.txt
Task2/Restaraunt/: CMakeLists.txt
Task2/Restaraunt/src/: Restaurant.c  main.c
Task2/Restaurant/include/: Restaurant.h
Task2/Restaurant/src/: Restaurant.c  main.c
Task2/Runsim/: CMakeLists.txt
Task2/Runsim/include/: ProgramList.h  RunSim.h
Task2/Runsim/src/: ProgramList.c  RunSim.c  longexe.c  main.c
ToBackup2/: very important file
