set(main1 sem5.1)
set(main2 sem5.2)
set(main3 sem5.3)
set(main4 sem5.4)
set(main5 sem5.5)
set(main6 sem5.6)

add_executable(${main1} src/main1.c)
add_executable(${main2} src/main2.c)
add_executable(${main3} src/main3.c)
add_executable(${main4} src/main4.c)
add_executable(${main5} src/main5.c)

target_link_libraries(${main1} pthread m)
target_link_libraries(${main2} pthread m)
target_link_libraries(${main3} pthread m)
target_link_libraries(${main4} pthread m)
target_link_libraries(${main5} pthread m)
